--- a/public/memo.html
+++ b/public/memo.html
@@ -8,28 +8,15 @@
     <link rel="stylesheet" href="../css/memo.css">
 </head>
 <body>
-
     <header>
-        <div class="burger-menu">&#9776;</div> <!-- Burger icon -->
-        <h1>MEMO</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <!-- Add other navigation links here -->
-            </ul>
-        </nav>
+        <!-- Header content -->
     </header>
-        <div id="memoBox">
-            <textarea id="memoInput" placeholder="Enter your memo here..."></textarea>
-            <button id="submit">SUBMIT</button>
-            <div id="memoList"></div>
-        </div>
+    <div id="memoBox">
+        <textarea id="memoInput" placeholder="Enter your memo here..."></textarea>
+        <button id="submit">Submit</button>
+        <div id="memoList"></div>
     </div>
     <script src="../js/default.js"></script>
-    <script src="../js/memo.js"></script>    
-
-
+    <script src="../js/memo.js"></script>
 </body>
 </html>
-
-
