--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
         <h1>Welcome to My Website</h1>
         <nav>
             <ul>
-                <li><a href="/memo.html">Memos Page</a></li>
+                <li><a href="/memo.html">Memo Page</a></li>
+                <li><a href="/blogg.html">Blogg Page</a></li>
                 <!-- Add other navigation links here -->
             </ul>
         </nav>
